--- a/index.html
+++ b/index.html
@@ -19,7 +19,28 @@
   </head>
     <body>
         <div class="paralx-div" id="parallax">
-            
+            <header class="header">
+                <nav class="navbar">
+                  <a class="brand" href="#">
+                      <img src="" alt="" srcset="">
+                      THE_NOOB_SHOW</a>
+                  <input type="checkbox" id="nav" class="hidden">
+                  <label for="nav" class="nav-toggle">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                   </label>
+                  <div class="wrapper">
+                    <ul class="menu">
+                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                    </ul>
+                  </div>
+                </nav>
+              </header>
             <!-- <nav class="navbar navbar-expand-lg navbar-mainbg fixed-top" >
                 <a class="navbar-brand navbar-logo" href="#">Yo boi</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +81,7 @@
         </div>
         <div class="paralx-div " >
             <div id="shadow"></div>
-                <div class="container-fluid cont-p" >
+                <!-- <div class="container-fluid cont-p" >
                     <a class="card1 shadow p-3 mb-5 bg-white rounded" href="#">
                     <h3>This is option 1</h3>
                     <p class="small">Card description with lots of great facts and interesting details.</p>
@@ -88,19 +109,19 @@
                         </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
         </div>
         <div class="paralx-div">
-            <section>
+            <!-- <section>
                 <div class="box">
                     <h1>What is Lorem Ipsum?</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>    
                 </div>
-            </section>
+            </section> -->
         </div>
         <div class="paralx-div">
-            <div class="form-container" id="form-container-1">
+            <!-- <div class="form-container" id="form-container-1">
                 <form name="">
                   <div class="form-block">
                     <label>Name</label>
@@ -114,7 +135,7 @@
                       <div class="btn btn-feedback">Submit</div>    
                   </div>
                 </form>
-            </div>
+            </div> -->
         </div>
         <footer class="footer-section">
             <div class="container">
