--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
                    </label>
                   <div class="wrapper">
                     <ul class="menu">
-                      <li class="menu-item"><a href="#">Menu Item</a></li>
-                      <li class="menu-item"><a href="#">Menu Item</a></li>
-                      <li class="menu-item"><a href="#">Menu Item</a></li>
-                      <li class="menu-item"><a href="#">Menu Item</a></li>
-                      <li class="menu-item"><a href="#">Menu Item</a></li>
+                      <li class="menu-item"><a href="#">HOME</a></li>
+                      <li class="menu-item"><a href="#">ABOUT ME</a></li>
+                      <li class="menu-item"><a href="#">CREATION</a></li>
+                      <li class="menu-item"><a href="#">DOWNLOADS</a></li>
                     </ul>
                   </div>
                 </nav>
