--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
                   </div>
                 </nav>
               </header>
+              <div class="hero-content ">
+                <div class="pb-4 mt-5 ">
+                  <h3 class="hero-header">LEARNING 3D</h3>
+                </div>
+                  <p class="hero-sub">Will Princess Toadstool be kidnapped again? Is there no end to the constant feud between Mario and Bowser?</p>
+                <button class="btn-round-solid">
+                  <ion-icon name="play"></ion-icon> Play Now
+                </button>
+                <button class="btn-round-clear">
+                  <ion-icon name="add"></ion-icon> Add to Library
+                </button>
+              </div>
             <!-- <nav class="navbar navbar-expand-lg navbar-mainbg fixed-top" >
                 <a class="navbar-brand navbar-logo" href="#">Yo boi</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
