--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                       <span></span>
                    </label>
                   <div class="wrapper">
-                    <ul class="menu">
-                      <li class="menu-item"><a href="#">HOME</a></li>
-                      <li class="menu-item"><a href="#">ABOUT ME</a></li>
-                      <li class="menu-item"><a href="#">CREATION</a></li>
-                      <li class="menu-item"><a href="#">DOWNLOADS</a></li>
+                    <ul class="menu text-center">
+                      <li class="menu-item text-center"><a href="#">HOME</a></li>
+                      <li class="menu-item text-center"><a href="#">ABOUT ME</a></li>
+                      <li class="menu-item text-center"><a href="#">CREATION</a></li>
+                      <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
                     </ul>
                   </div>
                 </nav>
