--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </div>
                 </nav>
               </header>
-              <div class="hero-content ">
+              <div class="hero-content container-fluid ">
                 <div class="pb-4 mt-5 ">
                   <h3 class="hero-header">LEARNING 3D</h3>
                 </div>
