complete expertise part

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>yo boi</title>
   </head>
     <body>
-        <div class="paralx-div" id="parallax">
+        <div class="paralx-div " id="parallax">
             <header class="header">
                 <nav class="navbar">
                   <a class="brand" href="#">
@@ -52,75 +52,42 @@
                   <ion-icon name="add"></ion-icon> Add to Library
                 </button>
               </div>
-            <!-- <nav class="navbar navbar-expand-lg navbar-mainbg fixed-top" >
-                <a class="navbar-brand navbar-logo" href="#">Yo boi</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars text-white"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Address Book</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Components</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0);"><i class="far fa-copy"></i>Documents</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav> -->
-            <div style="padding-top: 150px;"></div>
-            <!-- <div class="blurred-box" > -->
-                <!-- <div class="user-login-box">
-                    <p>
-                        <input class="user-password" type="text" /><i class="fas fa-search search-btn"></i>
-                    </p>  
-                </div> -->
-            <!-- </div>     -->
+            
         </div>
-        <div class="paralx-div " >
+        <div class="paralx-div pt-4 " >
             <div id="shadow"></div>
-                <!-- <div class="container-fluid cont-p" >
-                    <a class="card1 shadow p-3 mb-5 bg-white rounded" href="#">
-                    <h3>This is option 1</h3>
-                    <p class="small">Card description with lots of great facts and interesting details.</p>
-                    <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                        →
-                        </div>
-                    </div>
-                    </a>
-                    <a class="card1 shadow p-3 mb-5 bg-white rounded" href="#">
-                        <h3>This is option 2</h3>
-                        <p class="small">Card description with lots of great facts and interesting details.</p>
-                        <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                        </div>
-                    </a>
-                    <a class="card1 shadow p-3 mb-5 bg-white rounded" href="#">
-                        <h3>This is option 3</h3>
-                        <p class="small">Card description with lots of great facts and interesting details.</p>
-                        <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                        </div>
-                    </a>
-                </div> -->
+            <h3 class="hero-header text-center" style="font-size: 45px;">LEARNING 3D</h3>
+            <main class="page-content">
+                <div class="card">
+                  <div class="content">
+                    <h2 class="title">Mountain View</h2>
+                    <p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
+                    <button class="btn">View Trips</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="content">
+                    <h2 class="title">To The Beach</h2>
+                    <p class="copy">Plan your next beach trip with these fabulous destinations</p>
+                    <button class="btn">View Trips</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="content">
+                    <h2 class="title">Desert Destinations</h2>
+                    <p class="copy">It's the desert you've always dreamed of</p>
+                    <button class="btn">Book Now</button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="content">
+                    <h2 class="title">Explore The Galaxy</h2>
+                    <p class="copy">Seriously, straight up, just blast off into outer space today</p>
+                    <button class="btn">Book Now</button>
+                  </div>
+                </div>
+              </main>
+              <br><br>
         </div>
         <div class="paralx-div">
             <!-- <section>
