complete expertise part

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
-    <title>yo boi</title>
+    <title>THE_NOOB_SHOW</title>
   </head>
     <body>
         <div class="paralx-div " id="parallax">
@@ -90,13 +90,27 @@
               <br><br>
         </div>
         <div class="paralx-div">
-            <!-- <section>
-                <div class="box">
-                    <h1>What is Lorem Ipsum?</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>    
+            
+            <div class="card-hello">
+                <div class="card-img">
+                    <img src="https://dl.dropbox.com/s/u3j25jx9tkaruap/Webp.net-resizeimage.jpg?raw=1">
                 </div>
-            </section> -->
+                <div class="desc">
+                    <h6 class="primary-text">Olivia Smith</h6>
+                    <h6 class="secondary-text">Full Stack Developer</h6>
+                </div>
+                <button class="primary-text hello-btn">View Profile</button>
+                <div class="details">
+                    <div class="rating">
+                        <h6 class="primary-text"> 86% </h6>
+                        <h6 class="secondary-text"> Rating </h6>
+                    </div>
+                    <div class="activity">
+                        <h6 class="primary-text"> 92% </h6>
+                        <h6 class="secondary-text"> Activity </h6>
+                    </div>
+                </div>
+        </div>
         </div>
         <div class="paralx-div">
             <!-- <div class="form-container" id="form-container-1">
