--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                       <li class="menu-item text-center"><a href="#">HOME</a></li>
                       <li class="menu-item text-center"><a href="#">ABOUT ME</a></li>
                       <li class="menu-item text-center"><a href="#">CREATION</a></li>
+                      <li class="menu-item text-center"><a href="#">CHALLENGES</a></li>
                       <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
                     </ul>
                   </div>
