--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     </div>
 
   </div>
-  <div class="paralx-div  ">
+  <div class="paralx-div dis ">
     <!-- <div id="shadow"></div> -->
     <div class="container h-100">
       <div class="row align-items-center h-100">
-        <div class="container dis rounded">
+        <div class="container rounded">
           <!-- <h1 class="text-center">Featured in:</h1> -->
           <div class="slider">
             <div class="logos" style="color: aliceblue;">
