--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
             <div class="footer-widget">
               <div class="footer-social-icon">
                 <span>Follow us</span>
-                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
+                <a href="#"><i class="fab fa-twitter social-icon "></i></a>
+               <a href=""><i class="fab fa-instagram social-icon"></i></a> 
+                <a href=""><i class="fab fa-youtube social-icon"></i></a>
+
 
               </div>
             </div>
