--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <h3 class="logo">THE_NOOB_SHOW</h3>
+                <h3 class="logo text-light">THE_NOOB_SHOW</h3>
 
               </div>
               <div class="footer-text">
