--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
   <!-- index.js -->
-  <script src="index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
