--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <!--index.css  -->
-  <link rel="stylesheet" href="css/index.css">
-
+  <link rel="stylesheet" href="css/index.css" />
   <!-- fontawesome.css -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet" />
   <title>THE_NOOB_SHOW</title>
 </head>
 
 <body>
-  <div class="paralx-div " id="parallax">
+  <div class="paralx-div" id="parallax">
+    <!-- header start -->
     <header class="header">
+      <!-- Navbar start -->
       <nav class="navbar">
         <a class="brand" href="#">
-          <img src="" alt="" srcset="">
-          THE_NOOB_SHOW</a>
-        <input type="checkbox" id="nav" class="hidden">
+          <!-- img for navbar brand -->
+          <!-- <img src="" alt="" srcset="" /> -->
+          THE_NOOB_SHOW
+        </a>
+        <input type="checkbox" id="nav" class="hidden" />
         <label for="nav" class="nav-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span></span><span></span><span></span>
         </label>
         <div class="wrapper">
           <ul class="menu text-center">
@@ -44,13 +44,19 @@
           </ul>
         </div>
       </nav>
+      <!-- Navbar end -->
     </header>
-    <div class="hero-content container-fluid ">
-      <div class="pb-4 mt-5 ">
+    <!-- header end -->
+
+
+    <div class="hero-content container-fluid">
+      <div class="pb-4 mt-5">
         <h3 class="hero-header">LEARNING 3D</h3>
       </div>
-      <p class="hero-sub">Will Princess Toadstool be kidnapped again? Is there no end to the constant feud between Mario
-        and Bowser?</p>
+      <p class="hero-sub">
+        Will Princess Toadstool be kidnapped again? Is there no end to the
+        constant feud between Mario and Bowser?
+      </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
@@ -58,16 +64,15 @@
         <ion-icon name="add"></ion-icon> Add to Library
       </button>
     </div>
-
   </div>
-  <div class="paralx-div dis ">
+  <div class="paralx-div dis">
     <!-- <div id="shadow"></div> -->
     <div class="container h-100">
       <div class="row align-items-center h-100">
         <div class="container rounded">
           <!-- <h1 class="text-center">Featured in:</h1> -->
           <div class="slider">
-            <div class="logos" style="color: aliceblue;">
+            <div class="logos" style="color: aliceblue">
               <i class="fab fa-js fa-4x"></i>
               <i class="fab fa-linkedin-in fa-4x"></i>
               <i class="fab fa-dribbble fa-4x"></i>
@@ -75,40 +80,41 @@
               <i class="fab fa-github fa-4x"></i>
             </div>
 
-            <div class="logos " style="color: aliceblue; ">
-              <i class="fab fa-js fa-4x" style="padding-left: 60px;"></i>
-              <i class="fab fa-linkedin-in fa-4x" style="padding-left: 60px;"></i>
-              <i class="fab fa-dribbble fa-4x" style="padding-left: 60px;"></i>
-              <i class="fab fa-medium-m fa-4x" style="padding-left: 60px;"></i>
-              <i class="fab fa-github fa-4x" style="padding-left: 60px;"></i>
+            <div class="logos" style="color: aliceblue">
+              <i class="fab fa-js fa-4x" style="padding-left: 60px"></i>
+              <i class="fab fa-linkedin-in fa-4x" style="padding-left: 60px"></i>
+              <i class="fab fa-dribbble fa-4x" style="padding-left: 60px"></i>
+              <i class="fab fa-medium-m fa-4x" style="padding-left: 60px"></i>
+              <i class="fab fa-github fa-4x" style="padding-left: 60px"></i>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
   <div class="paralx-div">
-    <div class="hero-content2 container-fluid pt-5 ">
-      <div class="pb-4 mt-5 ">
+    <div class="hero-content2 container-fluid pt-5">
+      <div class="pb-4 mt-5">
         <h3 class="hero-header">LEARNING 3D</h3>
       </div>
-      <p class="hero-sub">Will Princess Toadstool be kidnapped again? Is there no end to the constant feud between Mario
-        and Bowser?</p>
+      <p class="hero-sub">
+        Will Princess Toadstool be kidnapped again? Is there no end to the
+        constant feud between Mario and Bowser?
+      </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
-
     </div>
-
   </div>
   <div class="paralx-div">
-    <div class="hero-content3 container-fluid pt-5 ">
-      <div class="pb-4 mt-5 ">
+    <div class="hero-content3 container-fluid pt-5">
+      <div class="pb-4 mt-5">
         <h3 class="hero-header">LEARNING 3D</h3>
       </div>
-      <p class="hero-sub">Will Princess Toadstool be kidnapped again? Is there no end to the constant feud between Mario
-        and Bowser?</p>
+      <p class="hero-sub">
+        Will Princess Toadstool be kidnapped again? Is there no end to the
+        constant feud between Mario and Bowser?
+      </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
@@ -118,12 +124,14 @@
     </div>
   </div>
   <div class="paralx-div">
-    <div class="hero-content2 container-fluid pt-5 ">
-      <div class="pb-4 mt-5 ">
+    <div class="hero-content2 container-fluid pt-5">
+      <div class="pb-4 mt-5">
         <h3 class="hero-header">LEARNING 3D</h3>
       </div>
-      <p class="hero-sub">Will Princess Toadstool be kidnapped again? Is there no end to the constant feud between Mario
-        and Bowser?</p>
+      <p class="hero-sub">
+        Will Princess Toadstool be kidnapped again? Is there no end to the
+        constant feud between Mario and Bowser?
+      </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
@@ -134,21 +142,20 @@
   </div>
   <footer class="footer-section">
     <div class="container">
-
       <div class="footer-content pt-5 pb-5">
         <div class="row">
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
                 <h3 class="logo text-light">THE_NOOB_SHOW</h3>
-
               </div>
               <div class="footer-text">
-                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididuntut consec
-                  tetur adipisicing
-                  elit,Lorem ipsum dolor sit amet.</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
+                  sed do eiusmod tempor incididuntut consec tetur adipisicing
+                  elit,Lorem ipsum dolor sit amet.
+                </p>
               </div>
-
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
@@ -156,11 +163,9 @@
               <div class="footer-social-icon">
                 <span>Follow us</span>
                 <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
-                <a href="#"><i class="fab fa-twitter social-icon "></i></a>
-               <a href=""><i class="fab fa-instagram social-icon"></i></a> 
+                <a href="#"><i class="fab fa-twitter social-icon"></i></a>
+                <a href=""><i class="fab fa-instagram social-icon"></i></a>
                 <a href=""><i class="fab fa-youtube social-icon"></i></a>
-
-
               </div>
             </div>
           </div>
@@ -168,11 +173,10 @@
             <div class="footer-widget">
               <div class="single-cta mt-5">
                 <i class="far fa-envelope-open"></i>
-                <div class="cta-text ">
+                <div class="cta-text">
                   <h4>Mail us</h4>
                   <span>meenaketanpadhy2002@gmail.com</span>
                 </div>
-
               </div>
             </div>
           </div>
@@ -184,7 +188,9 @@
         <div class="row">
           <div class="col-xl-6 col-lg-6 text-center text-lg-left">
             <div class="copyright-text">
-              <p>Copyright &copy; 2018, All Right Reserved <a href="https://github.com/NishikantaRay">@Nishikanta</a>
+              <p>
+                Copyright &copy; 2018, All Right Reserved
+                <a href="https://github.com/NishikantaRay">@Nishikanta</a>
               </p>
             </div>
           </div>
