update paralax css code

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
       <!-- Navbar end -->
     </header>
     <!-- header end -->
-
-
+    <!-- paralax 1 start -->
     <div class="hero-content container-fluid">
       <div class="pb-4 mt-5">
         <h3 class="hero-header">LEARNING 3D</h3>
@@ -58,12 +57,14 @@
         constant feud between Mario and Bowser?
       </p>
       <button class="btn-round-solid">
-        <ion-icon name="play"></ion-icon> Play Now
+        <ion-icon name="play"></ion-icon> Watch
       </button>
       <button class="btn-round-clear">
         <ion-icon name="add"></ion-icon> Add to Library
       </button>
     </div>
+    <!--  paralax1 end -->
+
   </div>
   <div class="paralx-div dis">
     <!-- <div id="shadow"></div> -->
