update html code

--- a/index.html
+++ b/index.html
@@ -64,14 +64,12 @@
       </button>
     </div>
     <!--  paralax1 end -->
-
   </div>
+  <!-- paraalx 2 -->
   <div class="paralx-div dis">
-    <!-- <div id="shadow"></div> -->
     <div class="container h-100">
       <div class="row align-items-center h-100">
         <div class="container rounded">
-          <!-- <h1 class="text-center">Featured in:</h1> -->
           <div class="slider">
             <div class="logos" style="color: aliceblue">
               <i class="fab fa-js fa-4x"></i>
@@ -93,6 +91,8 @@
       </div>
     </div>
   </div>
+  <!-- paralax 3 end -->
+  <!-- paralax 4 start -->
   <div class="paralx-div">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
@@ -107,6 +107,8 @@
       </button>
     </div>
   </div>
+  <!-- paralax 4 end -->
+  <!-- paralax 5-->
   <div class="paralx-div">
     <div class="hero-content3 container-fluid pt-5">
       <div class="pb-4 mt-5">
@@ -119,11 +121,9 @@
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
-      <!-- <button class="btn-round-clear">
-                  <ion-icon name="add"></ion-icon> Add to Library
-                </button> -->
     </div>
   </div>
+  <!-- paralax 5 -->
   <div class="paralx-div">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
@@ -136,11 +136,10 @@
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
-      <!-- <button class="btn-round-clear">
-                  <ion-icon name="add"></ion-icon> Add to Library
-                </button> -->
     </div>
   </div>
+  <!--  paralx 5 end -->
+  <!-- footer start -->
   <footer class="footer-section">
     <div class="container">
       <div class="footer-content pt-5 pb-5">
@@ -210,6 +209,7 @@
       </div>
     </div>
   </footer>
+  <!-- footer end -->
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
