update home page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+  <link rel="icon" href="./img/favicon.ico" type="image/icon type">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Bootstrap CSS -->
@@ -50,11 +51,10 @@
     <!-- paralax 1 start -->
     <div class="hero-content container-fluid">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">LEARNING 3D</h3>
+        <h3 class="hero-header">CREATIONS</h3>
       </div>
       <p class="hero-sub">
-        Will Princess Toadstool be kidnapped again? Is there no end to the
-        constant feud between Mario and Bowser?
+        Who the hack am I , what are my goal in life and why do i make the stuff I make.
       </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Watch
@@ -66,7 +66,7 @@
     <!--  paralax1 end -->
   </div>
   <!-- paraalx 2 -->
-  <div class="paralx-div dis">
+  <!-- <div class="paralx-div dis">
     <div class="container h-100">
       <div class="row align-items-center h-100">
         <div class="container rounded">
@@ -90,17 +90,16 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- paralax 3 end -->
   <!-- paralax 4 start -->
   <div class="paralx-div">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">LEARNING 3D</h3>
+        <h3 class="hero-header">TOWARDS 3D</h3>
       </div>
       <p class="hero-sub">
-        Will Princess Toadstool be kidnapped again? Is there no end to the
-        constant feud between Mario and Bowser?
+        I have started to learn 3d in blender because of corridor crew and their crazy videos, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.
       </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
@@ -110,13 +109,12 @@
   <!-- paralax 4 end -->
   <!-- paralax 5-->
   <div class="paralx-div">
-    <div class="hero-content3 container-fluid pt-5">
+    <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">LEARNING 3D</h3>
+        <h3 class="hero-header">CHALLENGES</h3>
       </div>
       <p class="hero-sub">
-        Will Princess Toadstool be kidnapped again? Is there no end to the
-        constant feud between Mario and Bowser?
+        I present to you my "HALL OF ART". This is the place where i flaunt all of my creations. I have started to participate in a lot of contests. I will keep creating more epic art and will keep updating this section.
       </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
@@ -127,11 +125,10 @@
   <div class="paralx-div">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">LEARNING 3D</h3>
+        <h3 class="hero-header">ABOUT ME</h3>
       </div>
       <p class="hero-sub">
-        Will Princess Toadstool be kidnapped again? Is there no end to the
-        constant feud between Mario and Bowser?
+        I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!
       </p>
       <button class="btn-round-solid">
         <ion-icon name="play"></ion-icon> Play Now
