added other pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet" />
-  <title>THE_NOOB_SHOW</title>
+  <title>THE_NOOBE_SHOW</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <a class="brand" href="#">
           <!-- img for navbar brand -->
           <!-- <img src="" alt="" srcset="" /> -->
-          THE_NOOB_SHOW
+          THE_NOOBE_SHOW
         </a>
         <input type="checkbox" id="nav" class="hidden" />
         <label for="nav" class="nav-toggle">
