--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -7,19 +7,75 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<link rel="stylesheet" href="css/style.css">
-<title>Hello, world!</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">    
+<link rel="stylesheet" href="../css/about.css">
+<link rel="stylesheet" href="../css/index.css">
+
+<title>About me</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
-
+    
+        <!-- START PRELOADER -->
+        <div id="preloader">
+            <div id="status">&nbsp;</div>
+        </div>
+        <div class="paralx-div" id="parallax">
+            <!-- header start -->
+            <header class="header">
+              <!-- Navbar start -->
+              <nav class="navbar">
+                <a class="brand" href="#">
+                  <!-- img for navbar brand -->
+                  <!-- <img src="" alt="" srcset="" /> -->
+                  THE_NOOBE_SHOW
+                </a>
+                <input type="checkbox" id="nav" class="hidden" />
+                <label for="nav" class="nav-toggle">
+                  <span></span><span></span><span></span>
+                </label>
+                <div class="wrapper">
+                  <ul class="menu text-center">
+                    <li class="menu-item text-center"><a href="#">HOME</a></li>
+                    <li class="menu-item text-center"><a href="#">ABOUT ME</a></li>
+                    <li class="menu-item text-center"><a href="#">CREATION</a></li>
+                    <li class="menu-item text-center"><a href="#">CHALLENGES</a></li>
+                    <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
+                  </ul>
+                </div>
+              </nav>
+              <!-- Navbar end -->
+            </header>
+            <!-- header end -->
+            <!-- paralax 1 start -->
+            <div class="hero container-fluid">
+              <div class="pb-4 mt-5">
+                <h3 class="hero-header">CREATIONS</h3>
+              </div>
+              <p class="hero-sub text-center">
+                Who the hack am I , what are my goal in life and why do i make the stuff I make.
+              </p>
+            </div>
+            <!--  paralax1 end -->
+          </div>
+        <!-- END PRELOADER -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-12">
+                    <img src="" alt="" srcset="">
+                </div>
+                <div class="col-md-6 col-12">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam alias obcaecati odio, aut nulla aspernatur a ducimus ex adipisci labore temporibus voluptate iste velit quibusdam libero repellat ratione aperiam nesciunt?</p>
+                </div>
+            </div>
+        </div>
+       
 <!-- Optional JavaScript; choose one of the two! -->
 <!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://shvvffle.github.io/js/jquery.easing.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
--->
+
+<script src="../js/about.js"></script>
 </body>
 </html>
