added about me page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </label>
         <div class="wrapper">
           <ul class="menu text-center">
-            <li class="menu-item text-center"><a href="#">HOME</a></li>
-            <li class="menu-item text-center"><a href="#">ABOUT ME</a></li>
-            <li class="menu-item text-center"><a href="#">CREATION</a></li>
-            <li class="menu-item text-center"><a href="#">CHALLENGES</a></li>
+            <li class="menu-item text-center"><a href="#home">HOME</a></li>
+            <li class="menu-item text-center"><a href="#aboutme">ABOUT ME</a></li>
+            <!-- <li class="menu-item text-center"><a href="#">CREATION</a></li> -->
+            <li class="menu-item text-center"><a href="#challenge">CHALLENGES</a></li>
             <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
           </ul>
         </div>
@@ -49,7 +49,7 @@
     </header>
     <!-- header end -->
     <!-- paralax 1 start -->
-    <div class="hero-content container-fluid">
+    <div class="hero-content container-fluid" id="home">
       <div class="pb-4 mt-5">
         <h3 class="hero-header">CREATIONS</h3>
       </div>
@@ -108,7 +108,7 @@
   </div>
   <!-- paralax 4 end -->
   <!-- paralax 5-->
-  <div class="paralx-div">
+  <div class="paralx-div" id="challenge">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
         <h3 class="hero-header">CHALLENGES</h3>
@@ -122,7 +122,7 @@
     </div>
   </div>
   <!-- paralax 5 -->
-  <div class="paralx-div">
+  <div class="paralx-div" id="aboutme">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
         <h3 class="hero-header">ABOUT ME</h3>
