--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -50,7 +50,7 @@
             <!-- paralax 1 start -->
             <div class="hero container-fluid">
               <div class="pb-4 mt-5">
-                <h3 class="hero-header">CREATIONS</h3>
+                <h3 class="hero-header">ABOUT ME</h3>
               </div>
               <p class="hero-sub text-center">
                 Who the hack am I , what are my goal in life and why do i make the stuff I make.
@@ -60,16 +60,79 @@
           </div>
         <!-- END PRELOADER -->
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-12">
-                    <img src="" alt="" srcset="">
-                </div>
-                <div class="col-md-6 col-12">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam alias obcaecati odio, aut nulla aspernatur a ducimus ex adipisci labore temporibus voluptate iste velit quibusdam libero repellat ratione aperiam nesciunt?</p>
-                </div>
-            </div>
+            
         </div>
-       
+       <!-- footer start -->
+  <footer class="footer-section">
+    <div class="container">
+      <div class="footer-content pt-5 pb-5">
+        <div class="row">
+          <div class="col-xl-4 col-lg-4 mb-50">
+            <div class="footer-widget">
+              <div class="footer-logo">
+                <h3 class="logo text-light">THE_NOOB_SHOW</h3>
+              </div>
+              <div class="footer-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
+                  sed do eiusmod tempor incididuntut consec tetur adipisicing
+                  elit,Lorem ipsum dolor sit amet.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+            <div class="footer-widget">
+              <div class="footer-social-icon">
+                <span>Follow us</span>
+                <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
+                <a href="#"><i class="fab fa-twitter social-icon"></i></a>
+                <a href=""><i class="fab fa-instagram social-icon"></i></a>
+                <a href=""><i class="fab fa-youtube social-icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+            <div class="footer-widget">
+              <div class="single-cta mt-5">
+                <i class="far fa-envelope-open"></i>
+                <div class="cta-text">
+                  <h4>Mail us</h4>
+                  <span>meenaketanpadhy2002@gmail.com</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+            <div class="copyright-text">
+              <p>
+                Copyright &copy; 2018, All Right Reserved
+                <a href="https://github.com/NishikantaRay">@Nishikanta</a>
+              </p>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+            <div class="footer-menu">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Policy</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- footer end -->
 <!-- Optional JavaScript; choose one of the two! -->
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
